--- a/src/app/models/TODO
+++ b/src/app/models/TODO
@@ -1,5 +1,5 @@
-Move.isValid(field: IField): boolean
 переделать Field.makeMove на Move.makeMove
+убрать фигуру из модели данных Move
 Figure.toString() - переделать на маленькие-большие буквы в зависимости от цвета
 Position.addFigure(coord, figure)
 Position.deleteFigure(coord)
@@ -8,4 +8,10 @@ Position.deleteFigureStringCoord(scoord: string)
 ChessCoord.fromString(scoord: string): ChessCoord
 Field.toFEN(): string
 Field.fromFEN(fen: string): Field
-убрать фигуру из модели данных Move
+Queen
+Pawn
+King
+Field обновить модель  с учетом рокировок, первый ли ход.
+Field, Move Рокировки
+Wrapper, увязка с приложением
+TS -> JS/Node
